<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_ComponentMyComponent_Command" Id="{a1dca97a-b9e1-4566-9faf-78a08d661af4}">
    <Declaration><![CDATA[TYPE ST_ComponentMyComponent_Command :
	STRUCT
		MyCommand1 : BOOL;
	END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>