<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_ComponentMyComponent_Status" Id="{4b8bc812-77af-4661-a312-32bb504738b3}">
    <Declaration><![CDATA[TYPE ST_ComponentMyComponent_Status :
	STRUCT
		MyVarProperty1 : BOOL;
		MyVarProperty2 : BOOL;
	END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>